--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "latex.js": "^0.12.4",
     "lodash": "^4.17.20",
     "markdown-js": "0.0.4",
-    "next": "9.5.2",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "next": "^12.2.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-markdown": "^4.3.1",
     "react-tex": "^1.5.0",
     "sass": "^1.26.10"
